--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   get: ^4.6.6
   cupertino_icons: ^1.0.2
+  flutter_osm_plugin: ^0.60.5
   awesome_extensions:
   google_fonts:
   flutter_svg:
